--- a/flaskr/static/css/main.css
+++ b/flaskr/static/css/main.css
@@ -530,8 +530,16 @@ Ensure the default browser behavior of the `hidden` attribute.
   height: 20%;
 }
 
+.h-2\/3 {
+  height: 66.666667%;
+}
+
 .h-2 {
   height: 0.5rem;
+}
+
+.h-1\/3 {
+  height: 33.333333%;
 }
 
 .min-h-screen {
@@ -562,6 +570,10 @@ Ensure the default browser behavior of the `hidden` attribute.
   width: 60%;
 }
 
+.w-4\/5 {
+  width: 80%;
+}
+
 .flex-none {
   flex: none;
 }
@@ -574,6 +586,10 @@ Ensure the default browser behavior of the `hidden` attribute.
   -webkit-appearance: none;
      -moz-appearance: none;
           appearance: none;
+}
+
+.justify-between {
+  justify-content: space-between;
 }
 
 .rounded-md {
